...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.373"
        android:contentDescription="Aplicacion para coleccionistas musicales" />

    <Button
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="339dp"
        android:layout_height="90dp"
        android:onClick="showVinilosAppMenu"
        android:text="Vinilos App! "
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
...
