<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/menuFragment">
    <fragment
        android:id="@+id/menuFragment"
        android:name="com.miso.vinilosapp.ui.menu"
        android:label="Menú"
        tools:layout="@layout/fragment_menu">
        <action
            android:id="@+id/action_menuFragment_to_fragment_albums"
            app:destination="@id/albumFragment"
            app:launchSingleTop="false" />
       <action
            android:id="@+id/action_menuFragment_to_fragment_musician"
            app:destination="@id/musicianFragment"
            app:launchSingleTop="false" />
        <action
            android:id="@+id/action_menuFragment_to_fragment_collectors"
            app:destination="@id/collectorFragment"
            app:launchSingleTop="false" />
    </fragment>
    <fragment
        android:id="@+id/albumFragment"
        android:name="com.miso.vinilosapp.ui.album"
        android:label="Albums"
        tools:layout="@layout/fragment_albums">
        <action
            android:id="@+id/action_albumFragment_to_fragment_albums_detail"
            app:destination="@id/fragment_albums_detail" />
    </fragment>
    <fragment
        android:id="@+id/fragment_albums_detail"
        android:name="com.miso.vinilosapp.ui.fragment_albums_detail"
        android:label="Album detail">
        <argument
            android:name="albumId"
            app:argType="integer" />
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="cover"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="releaseDate"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="description"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="genre"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="recordLabel"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="albumTracks"
            app:argType="com.miso.vinilosapp.models.Track[]"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/musicianFragment"
        android:name="com.miso.vinilosapp.ui.musicians"
        android:label="Musicians"
        tools:layout="@layout/fragment_musicians">
        <action
            android:id="@+id/action_musicianFragment_to_fragment_musicians_detail"
            app:destination="@id/fragment_musicians_detail" />
    </fragment>
    <fragment
        android:id="@+id/fragment_musicians_detail"
        android:name="com.miso.vinilosapp.ui.fragment_musicians_detail"
        android:label="Musicians detail">
        <argument
            android:name="Id"
            app:argType="integer" />
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="image"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="description"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="musicianalbums"
            app:argType="com.miso.vinilosapp.models.Album[]"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/collectorFragment"
        android:name="com.miso.vinilosapp.ui.collectors"
        android:label="Collectors"
        tools:layout="@layout/fragment_collectors">
        <action
            android:id="@+id/action_collectorFragment_to_fragment_collectors_detail"
            app:destination="@id/fragment_collectors_detail" />
    </fragment>
    <fragment
        android:id="@+id/fragment_collectors_detail"
        android:name="com.miso.vinilosapp.ui.collectors_detail"
        android:label="Collectors detail">
        <argument
            android:name="id"
            app:argType="integer" />
        <argument
            android:name="name"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="telephone"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="email"
            app:argType="string"
            android:defaultValue='""' />
        <argument
            android:name="comments"
            app:argType="com.miso.vinilosapp.models.Comment[]"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
</navigation>