...
                android:textSize="25sp"
                android:layout_gravity="center"
                android:textColor="#F8FFFFFF"
                tools:text="Nombre Album" />

            <TextView
                android:id="@+id/textAlbumGenre"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:layout_height="wrap_content"
                android:text="@{album.description}"
                tools:text="info genre"
                android:layout_marginStart="10dp"
...
